--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Photo by Mathilde Langevin on Unsplash</p>
         <p>Miss Pangolin, Animal Caretaker and Vet Techie</p>
         <img src="PicassoSpiritGuide.jpg" title="Pablo Picasso, spirit guide" alt="Pablo Picasso, Spirit Guide">
-        <p>JPablo Picasso, spirit guide</p>
+        <p>Pablo Picasso, spirit guide</p>
         </class>
         <class="footer">
             <p>You may contact us at geekclub at gee male dot com, or heck, try telepathy!</p>
